--- a/hamburger nav.html
+++ b/hamburger nav.html
@@ -11,7 +11,7 @@
     <title>Bootstrap!</title>
   </head>
   <body>
-    <nav class="navbar bg-dark navbar-dark">
+    <nav class="navbar bg-dark navbar-dark navbar-expand-lg">
       <div class="container">
         <a href="#" class="navbar-brand">Bootstrap</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> 
@@ -19,8 +19,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-na ml-auto"> 
-              <li>
+              <li class="nav-item active">
                 <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blogs</a>
               </li>
             </ul>
           </div>
